alpm-repo-db/tests/snapshots/integration__create_cli__create_cli__create__case_1_v1.snap
---
source: alpm-repo-db/tests/integration.rs
description: "alpm-repo-desc create v1 --filename example-1.0.0-1-any.pkg.tar.zst --name foo --base foo --version 1.0.0-1 --description An example package --groups example-group --groups other-group --csize 1818463 --isize 18184634 --sha256sum b5bb9d8014a0f9b1d61e21e796d78dccdf1352f23cd32812f4850b878ae4944c --pgpsig iHUEABYKAB0WIQRizHP4hOUpV7L92IObeih9mi7GCAUCaBZuVAAKCRCbeih9mi7GCIlMAP9ws/jU4f580ZRQlTQKvUiLbAZOdcB7mQQj83hD1Nc/GwD/WIHhO1/OQkpMERejUrLo3AgVmY3b4/uGhx9XufWEbgE= --url https://example.org/ --license MIT --license Apache-2.0 --arch x86_64 --builddate 1729181726 --packager Foobar McFooface <foobar@mcfooface.org> --replaces other-pkg-replaced --conflicts other-pkg-conflicts --provides example-component --depends glibc --depends gcc-libs --optdepends bash: for a script --makedepends cmake --checkdepends bats --md5sum d3b07384d113edec49eaa6238ad5ff00 desc"
expression: s
---
%FILENAME%
example-1.0.0-1-any.pkg.tar.zst

%NAME%
foo

%BASE%
foo

%VERSION%
1.0.0-1

%DESC%
An example package

%GROUPS%
example-group
other-group

%CSIZE%
1818463

%ISIZE%
18184634

%MD5SUM%
d3b07384d113edec49eaa6238ad5ff00

%SHA256SUM%
b5bb9d8014a0f9b1d61e21e796d78dccdf1352f23cd32812f4850b878ae4944c

%PGPSIG%
iHUEABYKAB0WIQRizHP4hOUpV7L92IObeih9mi7GCAUCaBZuVAAKCRCbeih9mi7GCIlMAP9ws/jU4f580ZRQlTQKvUiLbAZOdcB7mQQj83hD1Nc/GwD/WIHhO1/OQkpMERejUrLo3AgVmY3b4/uGhx9XufWEbgE=

%URL%
https://example.org/

%LICENSE%
MIT
Apache-2.0

%ARCH%
x86_64

%BUILDDATE%
1729181726

%PACKAGER%
Foobar McFooface <foobar@mcfooface.org>

%REPLACES%
other-pkg-replaced

%CONFLICTS%
other-pkg-conflicts

%PROVIDES%
example-component

%DEPENDS%
glibc
gcc-libs

%OPTDEPENDS%
bash: for a script

%MAKEDEPENDS%
cmake

%CHECKDEPENDS%
bats
